fixed searchbar alignment

--- a/css/searchbar.css
+++ b/css/searchbar.css
@@ -1,46 +1,36 @@
 
 
 .container-2{
-  width: 300px;
+  width: 230%;
   vertical-align: middle;
   white-space: nowrap;
   position: relative;
-
-
+  text-align: right;
 }
 
 .container-2 input#search{
   text-transform: uppercase;
   width: 35px;
   height:35px;
-  background-color: #EDEDED;
+  background-color: #F9F9F9;
   border: none;
   font-size: 10pt;
-  float: left;
+  float: right;
   color: #000;
-  margin-top: -5px;
+  margin-top: -6px;
   margin-left: 5px;
   padding-left: 35px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  -webkit-border-radius: 18px;
+  -moz-border-radius: 18px;
+  border-radius: 18px;
   color: #000;
-  -webkit-transition: width 1.0s ease;
-  -moz-transition: width 1.0s ease;
-  -ms-transition: width 1.0s ease;
-  -o-transition: width 1.0s ease;
-  transition: width 1.0s ease;
+  -webkit-transition: width 1.0s ease, background-color 0.5s ease;
+  -moz-transition: width 1.0s ease, background-color 0.5s ease;
+  -ms-transition: width 1.0s ease, background-color 0.5s ease;
+  -o-transition: width 1.0s ease, background-color 0.5s ease;
+  transition: width 1.0s ease, background-color 0.5s ease;
 }
 
-.scrolled-down input#search {
-  transition: background-color 0.2s ease;
-  background-color:#F9F9F9;
-}
-
-.scrolled-up input#search{
-  transition: background-color 0.2s ease;
-  background-color:#EDEDED;
-}
 .box {
   margin-top: -3px;
 }
@@ -62,9 +52,9 @@
    color: #65737e;  
 }
 .container-2 .icon{
-  position: absolute;
   top: 50%;
   margin-left: 17px;
+  margin-right: -28px;
   margin-top: 2px;
   z-index: 1;
   /*Gray Search Icon
